Add gulp build routine
Running `gulp` will copy over bridge/config.json to the User home
directory.

There are also additional tasks for cleaning dist/ and the User home
bridge config file, starting and stopping home bridge, and watching
files for changes. Currently no actions occur when watch is triggered.

--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "homebridge": "^0.4.20"
   },
   "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-shell": "^0.6.3",
+    "gulp-uglify": "^3.0.0"
   }
 }
