Add homebridge-rf-outlet test instance to bridge config

--- a/bridge/config.json
+++ b/bridge/config.json
@@ -6,6 +6,17 @@
     "pin": "380-81-301"
   },
   "description": "Self-contained HomeKit server for controlling wireless electrical outlets over radio frequency",
-  "accessories": [],
+  "accessories": [
+    {
+      "accessory": "Outlet",
+      "name": "Bedroom Lamp",
+      "type": "Light",
+      "manufacturer": "Ikea",
+      "model": "SKEBY Lamp",
+      "serial": "",
+      "rf_on": 4480259,
+      "rf_off": 4480268
+    }
+  ],
   "platforms": []
 }
