Update name of example outlet in config files

--- a/bridge/accessories/homebridge-rf-outlet/config-example.json
+++ b/bridge/accessories/homebridge-rf-outlet/config-example.json
@@ -9,7 +9,7 @@
   "accessories": [
     {
       "accessory": "Outlet",
-      "name": "Bedroom Lamp",
+      "name": "Lamp",
       "type": "Light",
       "manufacturer": "Ikea",
       "model": "SKEBY Lamp",
