--- a/bridge/config.json
+++ b/bridge/config.json
@@ -9,7 +9,7 @@
   "accessories": [
     {
       "accessory": "Outlet",
-      "name": "Bedroom Lamp",
+      "name": "Lamp",
       "type": "Light",
       "manufacturer": "Ikea",
       "model": "SKEBY Lamp",
