Add TypeScript dependency package

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-shell": "^0.6.3",
     "gulp-typescript": "^3.1.7",
-    "gulp-uglify": "^3.0.0"
+    "gulp-uglify": "^3.0.0",
+    "typescript": "^2.3.4"
   }
 }
