Update gitsubmodule commit reference

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "bridge/accessories/homebridge-rf-outlet"]
 	path = bridge/accessories/homebridge-rf-outlet
 	url = https://github.com/trentrand/homebridge-rf-outlet
+	branch = master
