--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Self-contained HomeKit server for controlling wireless electrical outlets over radio frequency",
   "main": "",
   "scripts": {
-    "install-globals": "sudo apt-get install wiringpi && sudo apt-get install lsof && npm install -g typescript && npm install --global gulp-cli",
-    "preinstall": "git submodule init && git submodule update && cd ./bridge/accessories/homebridge-rf-outlet/ && npm install && gulp",
+    "install-globals": "sudo apt-get install wiringpi lsof && npm install --global gulp-cli gulp typescript",
+    "preinstall": "git submodule init && git submodule update && cd ./bridge/accessories/homebridge-rf-outlet/",
     "install": "gulp build",
     "postinstall": "",
     "start": "gulp run",
