--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "dependencies": {
     "fs": "0.0.1-security",
     "homebridge": "^0.4.20",
-    "os": "^0.1.1"
+    "os": "^0.1.1",
+    "rcswitch": "^0.3.1"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
