--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "preinstall": "git submodule init && git submodule update && cd ./bridge/accessories/homebridge-rf-outlet/",
     "install": "gulp build",
     "postinstall": "",
-    "start": "gulp run",
+    "start": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "DEBUG=* homebridge -D -P ./bridge/accessories/ || true"
   },
