--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "HomeBridge Outlets",
-  "version": "0.0.0",
+  "name": "homebridge-outlets",
+  "version": "0.5.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
